--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.1",
     "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.2.0"
+  },
+  "devDependencies": {
     "react-scripts": "^5.0.0"
   },
   "scripts": {
