--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "bootstrap": "^5.2.3",
     "gh-pages": "^4.0.0",
     "marked": "^4.2.5",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
