--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@iconify/react": "^4.0.1",
     "@reduxjs/toolkit": "^1.9.1",
     "bootstrap": "^5.2.3",
     "gh-pages": "^4.0.0",
@@ -12,8 +13,6 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0",
-    "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "styled-components": "^5.3.6"
