--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.6.1",
+    "react-router": "^6.6.2",
+    "react-router-dom": "^6.6.2",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
