--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@reduxjs/toolkit": "^1.9.5",
     "bootstrap": "^5.2.3",
     "marked": "^5.0.1",
+    "marked-gfm-heading-id": "^3.0.2",
+    "marked-mangle": "^1.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.11.0",
+    "react-router-dom": "^6.11.1",
     "styled-components": "^5.3.10"
   },
   "devDependencies": {
