--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-router-dom": "^6.11.2",
     "remark-breaks": "^3.0.3",
     "remark-gfm": "^3.0.1",
-    "styled-components": "^5.3.11"
+    "styled-components": "^6.0.0-rc.6"
   },
   "devDependencies": {
     "gh-pages": "^5.0.0",
