--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-router-dom": "^6.14.0",
     "remark-breaks": "^3.0.3",
     "remark-gfm": "^3.0.1",
-    "styled-components": "^6.0.0-rc.6"
+    "styled-components": "^6.0.1"
   },
   "devDependencies": {
     "gh-pages": "^5.0.0",
